# floeterm

./: .develop.md  .gitignore  AGENTS.md  Makefile  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
app/backend/: go.mod  go.sum
app/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
beamterm-renderer/: Cargo.toml  README.md  UPSTREAM.md  build.mjs  package.json  rust-toolchain.toml
beamterm-renderer/src/: mouse.rs  terminal.rs  wasm.rs
beamterm-renderer/src/gl/: canvas_rasterizer.rs  renderer.rs
beamterm-renderer/test/: context-options.test.mjs
e2e/: package-lock.json  package.json  playwright.config.mjs
e2e/performance/: runStandalonePerformance.mjs  standalonePerformanceReport.mjs
e2e/support/: browserFailures.mjs
e2e/tests/: large-paste.spec.mjs  mirror-same-session.spec.mjs  renderer-health.spec.mjs  (+3 more)
protocol/: shell_integration_activity_vectors.json  terminal_live_v1_vectors.json
terminal-go/: README.md  activate_session_test.go  clear_history_test.go  config.go  connection.go  connection_resize_test.go  doc.go  env.go  event_handler_deadlock_test.go  go.mod  go.sum  history_filter.go  history_filter_test.go  id.go  live_attachment.go  logger.go  manager.go  manager_test.go  output_activity_test.go  pty_output_monitor_darwin.go  pty_output_monitor_linux.go  pty_output_monitor_other.go  pty_read_test.go  ringbuffer.go  ringbuffer_test.go  session.go  session_event_order_test.go  session_test.go  shell.go  shell_init.go  shell_init_test.go  shell_integration.go  shell_integration_test.go  size.go  size_test.go  types.go  workdir.go  workdir_test.go
terminal-web/: README.md  THEME_PROVENANCE.json  THEME_QUALITY_EVIDENCE.json  THIRD_PARTY_THEME_NOTICES.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.browser.config.ts  vitest.config.ts
(+112 files in other folders)
