[package]
name = "floegence-beamterm-renderer"
version = "1.0.1-rc.6"
edition = "2024"
rust-version = "1.90.0"
license = "MIT"
authors = ["Adrian Papari <junkdog@angelhill.net>", "FloeTerm maintainers"]
description = "FloeTerm-maintained WebGL2 terminal renderer fork"
repository = "https://github.com/floegence/floeterm"
homepage = "https://github.com/floegence/floeterm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "2.11"
beamterm-core = "=1.0.0"
beamterm-data = "=1.0.0"
compact_str = "0.9.0"
console_error_panic_hook = "0.1.7"
glow = "0.17"
js-sys = "0.3.81"
thiserror = "2.0.18"
unicode-width = { version = "0.2", features = ["core"] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.54"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0.149"
optional = true

[dependencies.serde-wasm-bindgen]
version = "0.6.5"
optional = true

[dependencies.unicode-segmentation]
version = "1.12.0"
optional = true

[dependencies.web-sys]
version = "0.3.81"
features = [
  "console",
  "CanvasRenderingContext2d",
  "Clipboard",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "ImageData",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "OffscreenCanvas",
  "OffscreenCanvasRenderingContext2d",
  "Performance",
  "Screen",
  "TextMetrics",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlContextEvent",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "Window",
]

[features]
js-api = [
  "compact_str/serde",
  "dep:serde",
  "dep:serde_json",
  "dep:serde-wasm-bindgen",
  "dep:unicode-segmentation",
]
